--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-NEXT_PUBLIC_CHAIN_ID=lucina
-NEXT_PUBLIC_CHAIN_NAME=Juno
+NEXT_PUBLIC_CHAIN_ID=testing
+NEXT_PUBLIC_CHAIN_NAME="Juno Local Test"
 NEXT_PUBLIC_CHAIN_BECH32_PREFIX=juno
-NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=https://rpc.juno.giansalex.dev/
-NEXT_PUBLIC_CHAIN_REST_ENDPOINT=https://lcd.juno.giansalex.dev/
-NEXT_PUBLIC_STAKING_DENOM="ujuno"
-NEXT_PUBLIC_SITE_TITLE=Next CosmWasm Keplr Starter
+NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=http://localhost:26657
+NEXT_PUBLIC_CHAIN_REST_ENDPOINT=http://localhost:1317
+NEXT_PUBLIC_STAKING_DENOM="ujunox"
+NEXT_PUBLIC_COIN_DECIMALS=6
+NEXT_PUBLIC_GAS_PRICE=0.025
+NEXT_PUBLIC_SITE_TITLE=Vectis
 NEXT_PUBLIC_SITE_ICON_URL="/juno.svg"
