--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.25.6",
+    "@cosmjs/proto-signing": "^0.26.4",
+    "@cosmjs/stargate": "^0.26.4",
     "daisyui": "^1.14.0",
     "next": "11.1.1",
     "react": "17.0.2",
