--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint && prettier --check .",
-    "prettier:write": "prettier --write ."
+    "prettier:write": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.28.4",
@@ -25,9 +26,15 @@
     "autoprefixer": "^10.4.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "postcss": "^8.4.12",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.3.5"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
