--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cosmjs/cosmwasm-stargate": "^0.28.4",
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmjs/stargate": "^0.28.4",
+    "@dao-dao/types": "^1.1.0",
     "daisyui": "^1.14.0",
     "next": "12.1.5",
     "react": "17.0.2",
