--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
+    "e2e:start": "playwright test -c e2e/playwright.config.ts",
     "start": "next start",
     "lint": "next lint && prettier --check .",
     "prettier:write": "prettier --write .",
@@ -23,12 +24,15 @@
     "theme-change": "^2.0.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.22.2",
     "@types/react": "17.0.19",
     "autoprefixer": "^10.4.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "node-stream-zip": "^1.15.0",
+    "playwright": "^1.22.2",
     "postcss": "^8.4.12",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.0.24",
