--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "e2e:start": "playwright test -c e2e/playwright.config.ts",
+    "test:e2e": "playwright test -c e2e/playwright.config.ts",
+    "test:ci": "start-server-and-test dev 3000 test:playwright",
     "start": "next start",
     "lint": "next lint && prettier --check .",
     "prettier:write": "prettier --write .",
@@ -35,6 +36,7 @@
     "playwright": "^1.22.2",
     "postcss": "^8.4.12",
     "prettier": "^2.3.2",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.3.5"
   },
