env variables in pipeline

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -15,6 +15,22 @@ jobs:
       - run: npm ci
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+      - run: npx playwright install --with-deps chromium
+      - name: Set env vars
+        shell: bash
+        run: |
+          set +x
+          echo "NEXT_PUBLIC_CHAIN_ID=testing" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_CHAIN_NAME="Juno Local Test"" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_CHAIN_BECH32_PREFIX=juno" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=http://localhost:26657" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_CHAIN_REST_ENDPOINT=http://localhost:1317" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_STAKING_DENOM="ujunox"" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_COIN_DECIMALS=6" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_GAS_PRICE=0.025" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_SITE_TITLE=Vectis" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_SITE_ICON_URL="/juno.svg"" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_CONTRACT_FACTORY_ADDRESS=juno14jf8r2kxlymgjkp3xj8xuyud7h974648qdn9tsgsj0pascmntt9s4fueh5" >> $GITHUB_ENV
       - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test:ci
         env:
-          PWTEST_CHANNEL: chrome
+          PWTEST_CHANNEL: chromium
