--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -16,15 +16,22 @@ jobs:
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
       - run: npx playwright install --with-deps chromium
+      - name: Run vectis image
+        run: |
+          docker run -d \
+          -p 1317:1317 \
+          -p 26656:26656 \
+          -p 26657:26657 \
+          ghcr.io/nymlab/vectis:main
       - name: Set env vars
         shell: bash
         run: |
           set +x
-          echo 'NEXT_PUBLIC_CHAIN_ID=uni-2' >> $GITHUB_ENV
-          echo 'NEXT_PUBLIC_CHAIN_NAME="Juno Tesnet"' >> $GITHUB_ENV
+          echo 'NEXT_PUBLIC_CHAIN_ID=testing' >> $GITHUB_ENV
+          echo 'NEXT_PUBLIC_CHAIN_NAME="Juno Local"' >> $GITHUB_ENV
           echo 'NEXT_PUBLIC_CHAIN_BECH32_PREFIX=juno' >> $GITHUB_ENV
-          echo 'NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=https://rpc.uni.junonetwork.io/' >> $GITHUB_ENV
-          echo 'NEXT_PUBLIC_CHAIN_REST_ENDPOINT=https://api.uni.junonetwork.io/' >> $GITHUB_ENV
+          echo 'NEXT_PUBLIC_CHAIN_RPC_ENDPOINT=http://localhost:26657' >> $GITHUB_ENV
+          echo 'NEXT_PUBLIC_CHAIN_REST_ENDPOINT=http://localhost:1317' >> $GITHUB_ENV
           echo 'NEXT_PUBLIC_STAKING_DENOM=ujunox' >> $GITHUB_ENV
           echo 'NEXT_PUBLIC_COIN_DECIMALS=6' >> $GITHUB_ENV
           echo 'NEXT_PUBLIC_GAS_PRICE=0.025' >> $GITHUB_ENV
