--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmjs/stargate": "^0.28.4",
     "@dao-dao/types": "^1.1.0",
+    "@vectis/types": "^0.0.1",
     "daisyui": "^1.14.0",
     "next": "12.1.5",
     "react": "17.0.2",
