--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "test:e2e": "playwright test -c e2e/playwright.config.ts",
-    "test:ci": "npm run dev & npm run test:e2e",
+    "test:ci": "start-server-and-test dev 3000 test:e2e",
     "start": "next start",
     "lint": "next lint && prettier --check .",
     "prettier:write": "prettier --write .",
