--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-cosmwasm-keplr-starter",
+  "name": "vectis-fe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,12 +18,17 @@
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmjs/stargate": "^0.28.4",
     "@dao-dao/types": "^1.1.0",
+    "@headlessui/react": "^1.6.4",
+    "@keplr-wallet/types": "^0.10.5",
     "@vectis/types": "^0.0.3",
+    "clsx": "^1.1.1",
     "daisyui": "^1.14.0",
     "next": "12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "theme-change": "^2.0.2"
+    "react-icons": "^4.4.0",
+    "theme-change": "^2.0.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
