--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cosmjs/cosmwasm-stargate": "^0.28.4",
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmjs/stargate": "^0.28.4",
+    "@cosmjs/tendermint-rpc": "^0.28.4",
     "@dao-dao/types": "^1.1.0",
     "@headlessui/react": "^1.6.4",
     "@keplr-wallet/types": "^0.10.5",
