--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
-    "theme-change": "^2.0.2",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.22.2",
     "@types/react": "17.0.19",
     "autoprefixer": "^10.4.4",
+    "cosmjs-types": "^0.5.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "husky": ">=6",
