--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           set +x
           echo 'NEXT_PUBLIC_NETWORK=juno_local' >> $GITHUB_ENV
-          echo 'NEXT_PUBLIC_CONTRACT_FACTORY_ADDRESS=`docker exec -it vectis_node cat ./factoryAddr.txt`' >> $GITHUB_ENV
+          echo 'NEXT_PUBLIC_CONTRACT_FACTORY_ADDRESS=`docker exec -it vectis_node cat .cache/uploadInfo.json | grep '"factoryAddr":' | cut -c19-81`' >> $GITHUB_ENV
       - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test:ci
         env:
           PWTEST_CHANNEL: chromium
