--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "test:e2e": "playwright test -c e2e/playwright.config.ts",
+    "test:e2e": "DEBUG=pw:api playwright test -c e2e/playwright.config.ts",
     "test:ci": "start-server-and-test dev 3000 test:e2e",
     "start": "next start",
     "lint": "next lint && prettier --check .",
