fix: extract address from deployInfo.json

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -28,7 +28,7 @@ jobs:
         shell: bash
         run: |
           set +x
-          FACTORY_ADDRESS=$(docker exec vectis_node cat .cache/uploadInfo.json | grep "factoryAddr" | cut -c19-81)
+          FACTORY_ADDRESS=$(docker exec vectis_node cat .cache/deployInfo.json | grep "factoryAddr" | cut -c19-81)
           echo 'NEXT_PUBLIC_NETWORK=juno_local' >> $GITHUB_ENV
           echo "NEXT_PUBLIC_CONTRACT_FACTORY_ADDRESS=$FACTORY_ADDRESS" >> $GITHUB_ENV
       - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test:e2e:debug
