--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dao-dao/types": "^1.1.0",
     "@headlessui/react": "^1.6.4",
     "@keplr-wallet/types": "^0.10.5",
+    "@sentry/nextjs": "^7.3.1",
     "@vectis/types": "^0.0.4",
     "clsx": "^1.1.1",
     "daisyui": "^1.14.0",
